--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "express": "^4.21.2",
     "firebase-admin": "^13.0.2",
     "http-status-codes": "^2.3.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.15",
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "redis": "^5.9.0",
     "socket.io": "^4.7.5",
     "stripe": "17.5.0",
     "twilio": "^5.4.0",
