--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "barber-me",
+  "name": "kimojor-beauty",
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "docker-compose up -d && ts-node-dev --respawn --transpile-only src/server.ts",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f redis"
   },
   "author": "Azizul",
   "license": "ISC",
