--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.15",
     "redis": "^5.9.0",
     "socket.io": "^4.7.5",
