--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/hpp": "^0.2.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
@@ -27,11 +29,16 @@
     "bcrypt": "^5.1.1",
     "bullmq": "^5.63.0",
     "colors": "^1.4.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.0.2",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
