--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "debug": "^4.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -52,7 +53,7 @@
     "socket.io": "^4.7.5",
     "stripe": "17.5.0",
     "twilio": "^5.4.0",
-    "winston": "^3.14.2",
+    "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
   }
