--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "debug": "^4.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.0.2",
